<resources>
    <string name="app_name">Simple Safe</string>
    <string name="title_activity_test">TEST</string>
    <string name="title_activity_testactivity">TESTACTIVITY</string>
    <string name="title_activity_cloud_upload_img">CloudUploadIMGActivity</string>
    <string name="title_activity_cloud_img_selecter">CloudImgSelecter</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_cloud_folder_test">CloudFolderTest</string>
    <string name="delete">Delete Folder</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Preference Titles -->
    <string name="authentication_header">Authentication</string>
    <string name="encryption_header">Cryptography</string>
    <string name="user_header">User</string>


    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Authentication Preferences -->
    <string name="Authentication_sign_in_lock_title">Sign in lock</string>
    <string name="Authentication_sign_in_lock_summary">Lock the password screen after a number of failed login attempts</string>

    <string name="Authentication_sign_in_attempt_title">Sign in attempt limit</string>

    <string name="Authentication_sign_in_lock_timer_title">Sign in lock timer</string>

    <string name="Authentication_intruder_snap_title">Intruder snap</string>
    <string name="Authentication_intruder_snap_summary">Take front-facing pictures when the number of failed login attempts is reached</string>

    <string name="Authentication_take_snap_after_title">Take snap after</string>

    <!-- Encryption Preferences -->
    <string name="Encryption_type_title">Encryption type</string>
    <string name="Encryption_type_summary">Change the type of encryption to suit your needs, AES-256 recommended</string>
    <!-- Encryption Preference -->
    <string-array name="encryption_entries">
        <item>AES-256</item>
        <item>AES-128</item>
        <item>Triple-DES</item>
    </string-array>

    <string-array name="encryption_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="encryption_default_value">1</string>

    <string name="Hash_type_title">Hash type</string>
    <!--Hash Preferences-->
    <string-array name="hash_entries">
        <item>SHA-256</item>
        <item>PBKDF-2</item>
        <item>BCrypt</item>
    </string-array>

    <string-array name="hash_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="hash_default_value">1</string>

    <!-- User Preferences -->
    <string name="User_change_email_title">Change email</string>
    <string name="User_change_password_title">Change password</string>
    <string name="User_delete_account_title">Delete account</string>


    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->


    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="Back_up">Back up</string>
    <string name="next">next</string>
    <string name="start">start</string>
    <string name="title_activity_local_and_cloud_file">LocalAndCloudFileActivity</string>
    <string name="tab_text_1">Local</string>
    <string name="tab_text_2">Cloud</string>
    <string name="title_activity_file_explorer">FileExplorerActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_local_file_explorer">LocalFileExplorer</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="local_title_files">Files</string>
    <string name="local_title_take_pic">Camera</string>
    <string name="local_title_upload">Upload</string>
    <string name="download">Download</string>
    <string name="notes_add">Add Note</string>
    <string name="delete_note">Delete Note</string>
</resources>
